--- a/DOMAIN3 - Security Architecture and Engineering/3.9 Design site and facility security controls.md
+++ b/DOMAIN3 - Security Architecture and Engineering/3.9 Design site and facility security controls.md
@@ -167,7 +167,7 @@ One of the primary concerns in evidence storage is physical security. Unauthoriz
 
 > ⚠ You should consult a lawyer when dealing with evidence storage to ensure compliance with legal and regulatory requirements, especially regarding data privacy, chain of custody, and retention periods.
 
-Environmental controls are also crucial for maintaining the condition of evidence. For example, sensitive physical evidence like biological samples, narcotics, or documents may require specific temperature, humidity, or light conditions to prevent degradation. In such cases, the evidence storage facility must be equipped with climate control systems to maintain optimal conditions. Similarly, for digital evidence, proper storage conditions, including protection from electromagnetic interference, must be ensured to prevent corruption or data loss.
+**Environmental controls** are also crucial for maintaining the condition of evidence. For example, sensitive physical evidence like biological samples, narcotics, or documents may require specific temperature, humidity, or light conditions to prevent degradation. In such cases, the evidence storage facility must be equipped with climate control systems to maintain optimal conditions. Similarly, for digital evidence, proper storage conditions, including protection from electromagnetic interference, must be ensured to prevent corruption or data loss.
 
 In addition to physical and environmental security, evidence storage facilities should implement a **well-documented chain-of-custody process** to track and maintain accountability for each piece of evidence. This involves recording every person who has had access to the evidence, when it was accessed, and for what purpose. The chain-of-custody documentation is crucial for maintaining the legal admissibility of evidence, ensuring that it has not been tampered with or altered. Each piece of evidence should be carefully labeled with identifying information, such as case numbers, item descriptions, and storage locations, to prevent misidentification and to facilitate efficient retrieval.
 
@@ -175,7 +175,7 @@ For digital evidence, additional safeguards must be in place. **Digital devices 
 
 Fire and disaster risk mitigation is also an important aspect of evidence storage. Facilities should be equipped with fire suppression systems that do not damage sensitive evidence, such as gaseous or waterless fire suppression systems. In addition, facilities should be designed with resilience in mind, incorporating features like secure backups and off-site storage to ensure evidence is not lost due to catastrophic events like fires, floods, or earthquakes.
 
-Finally, proper disposal procedures are just as important as storage. Evidence that is no longer needed for investigations or legal proceedings must be disposed of securely to prevent any potential misuse or unauthorized recovery. The disposal process should follow strict guidelines to ensure that any sensitive material, particularly digital evidence, is permanently destroyed beyond recovery. In some cases, this may involve physical destruction, such as shredding documents or degaussing hard drives, or secure wiping of digital media to prevent data recovery.
+Finally, proper **disposal procedures** are just as important as storage. Evidence that is no longer needed for investigations or legal proceedings must be disposed of securely to prevent any potential misuse or unauthorized recovery. The disposal process should follow strict guidelines to ensure that any sensitive material, particularly digital evidence, is permanently destroyed beyond recovery. In some cases, this may involve physical destruction, such as shredding documents or degaussing hard drives, or secure wiping of digital media to prevent data recovery.
 
 ### Open Questions ###
 
@@ -213,7 +213,7 @@ Digital evidence must be encrypted at rest and in transit, stored in secure cont
 
 ## 3.9.5 Restricted and work area security ##
 
-The first line of defense in restricted and work area security is access control. Access to these areas must be restricted to authorized personnel only, typically through a combination of physical barriers, authentication systems, and surveillance. Physical barriers, such as doors, gates, and fences, are used to prevent unauthorized entry into the area. These barriers are often reinforced with access control mechanisms, such as card readers, biometric systems, or PIN codes, which ensure that only individuals with proper credentials can gain entry. Additionally, access logs should be maintained to track who enters and exits the area and when, creating an audit trail for accountability.
+The first line of defense in restricted and work area security is **access control**. Access to these areas must be restricted to authorized personnel only, typically through a combination of physical barriers, authentication systems, and surveillance. Physical barriers, such as doors, gates, and fences, are used to prevent unauthorized entry into the area. These barriers are often reinforced with access control mechanisms, such as card readers, biometric systems, or PIN codes, which ensure that only individuals with proper credentials can gain entry. Additionally, access logs should be maintained to track who enters and exits the area and when, creating an audit trail for accountability.
 
 **Surveillance** plays a key role in restricted area security. Surveillance cameras and motion detectors should be strategically placed around the perimeter and throughout the facility to monitor for any signs of unauthorized activity. Real-time monitoring by security personnel can help to quickly identify and respond to potential threats, while recorded footage serves as valuable evidence in case of security incidents. Alarms and other detection systems can be integrated with the surveillance network to alert security teams to any breaches or suspicious behavior.
 
@@ -275,7 +275,7 @@ Install fire suppression to prevent smoke or fire spread, elevate utilities in f
 
 Environmental issues, including both natural disasters and man-made events, pose significant risks to the physical security of a facility. These events can cause severe damage to infrastructure, disrupt operations, and threaten the safety of personnel and sensitive data. Organizations must proactively assess potential environmental risks and implement strategies to mitigate these threats to ensure the continuity of operations and the protection of assets.
 
-:necktie: We must not only be aware of environmental risks but also assess their potential impact on critical assets and manage them proactively through a structured Business Continuity strategy
+> ⚠ We must not only be aware of environmental risks but also assess their potential impact on critical assets and manage them proactively through a structured Business Continuity strategy
 
 **Natural disasters**, such as earthquakes, floods, hurricanes, tornadoes, and wildfires, can have devastating effects on a facility's physical infrastructure. Each type of disaster requires tailored risk assessments and response plans. For instance, in areas prone to earthquakes, building structures must be designed to withstand seismic activity. Similarly, flood-prone regions require flood barriers, raised foundations, and drainage systems to prevent water damage.
 
@@ -283,13 +283,13 @@ For man-made environmental risks, such as industrial accidents, terrorism, or ar
 
 To address both natural and man-made environmental risks, a comprehensive business continuity plan (BCP) and disaster recovery plan (DRP) should be developed. These plans outline procedures for responding to and recovering from environmental disasters, ensuring that critical functions can continue with minimal disruption. The BCP should include evacuation routes, emergency communication protocols, and provisions for remote work if physical access to the facility becomes impossible. The DRP should detail backup systems for data storage and the restoration of IT infrastructure, ensuring that operations can be quickly resumed in the event of a major disaster.
 
-:link: Refer also to [1.7 Identify, analyze, assess, prioritize, and implement Business Continuity (BC) requirements](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/8f06bf97a55c29bb02eba9020fc29532906c4d9d/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.07%20Identify%2C%20analyze%2C%20assess%2C%20prioritize%2C%20and%20implement%20Business%20Continuity%20(BC)%20requirements.md#17-identify-analyze-assess-prioritize-and-implement-business-continuity-bc-requirements)
+🔗 Refer also to [1.7 Identify, analyze, assess, prioritize, and implement Business Continuity (BC) requirements](../DOMAIN1%20-%20Security%20and%20Risk%20Management/1.7%20Identify,%20analyze,%20assess,%20prioritize,%20and%20implement%20Business%20Continuity%20(BC)%20requirements.md)
 
 Environmental threats also highlight the need for robust facility design that incorporates resilience against both immediate and long-term environmental impacts. This includes securing utilities, HVAC systems, and critical infrastructure to withstand environmental stresses. For example, backup power systems such as generators and uninterruptible power supplies (UPS) are essential for ensuring that operations can continue during power outages caused by natural disasters. Additionally, facilities should be equipped with fire suppression systems, flood protection, and climate control mechanisms to safeguard sensitive equipment and data during extreme environmental events.
 
-Regular risk assessments should be conducted to identify vulnerabilities within a facility and its surrounding environment. These assessments should consider both the probability of specific environmental events and the potential impact on the organization’s operations. Based on these assessments, mitigation strategies should be implemented, such as reinforcing building structures, implementing redundant systems, and ensuring that employees are trained to respond to environmental threats.
+**Regular risk assessments** should be conducted to identify vulnerabilities within a facility and its surrounding environment. These assessments should consider both the probability of specific environmental events and the potential impact on the organization’s operations. Based on these assessments, mitigation strategies should be implemented, such as reinforcing building structures, implementing redundant systems, and ensuring that employees are trained to respond to environmental threats.
 
-Personnel safety is also a priority in environmental security planning. Staff should be trained on emergency procedures, including evacuation routes, shelter-in-place protocols, and first aid. Emergency supplies, such as food, water, and medical kits, should be readily available in case of long-term disruptions. Communication plans must be in place to ensure that employees can stay informed about the status of the situation and receive instructions during a crisis.
+**Personnel safety** is also a priority in environmental security planning. Staff should be trained on emergency procedures, including evacuation routes, shelter-in-place protocols, and first aid. Emergency supplies, such as food, water, and medical kits, should be readily available in case of long-term disruptions. Communication plans must be in place to ensure that employees can stay informed about the status of the situation and receive instructions during a crisis.
 
 In addition to physical and operational measures, environmental risks also demand attention to cybersecurity. Critical infrastructure systems such as power grids, water supply, and HVAC systems are increasingly interconnected with networked systems that may be vulnerable to cyberattacks. Securing these systems against digital threats is essential to ensure that environmental systems are not compromised by cybercriminals, especially during crises when the consequences of system failures are magnified.
 
@@ -335,27 +335,27 @@ Fire prevention is the first line of defense in safeguarding a facility. This in
 
 Building materials and design play a key role in fire prevention. Fire-resistant materials should be used in the construction of walls, ceilings, and floors to slow the spread of fire and protect critical areas such as server rooms and data centers. Additionally, fire-rated doors and barriers should be installed to compartmentalize fires and prevent them from spreading to other parts of the facility. Fire breaks, such as fire-resistant walls or doors, should be incorporated to limit the movement of smoke and flames.
 
-:brain: Fires are categorized by the type of fuel:
+Fires are categorized by the type of fuel:
 
-| Fire Class | Fuel Type                         | Examples                          | Extinguishing Method                                  |
-|------------|------------------------------------|-----------------------------------|-------------------------------------------------------|
-| Class A    | Ordinary combustibles              | Wood, paper, cloth, rubber        | Water, foam, multipurpose dry chemical                |
-| Class B    | Flammable liquids and gases        | Gasoline, oil, paint, propane     | Foam, CO₂, dry chemical (do **not** use water)        |
-| Class C    | Energized electrical equipment     | Servers, wiring, appliances       | CO₂, dry chemical (power must be disconnected first)  |
-| Class D    | Combustible metals                 | Magnesium, sodium, potassium      | Dry powder (specialized agents, not water/foam)       |
-| Class K    | Cooking oils and fats (kitchen)    | Vegetable oil, animal fats        | Wet chemical extinguishers (saponification reaction)  |
+| Fire Class | Fuel Type                       | Examples                      | Extinguishing Method                                 |
+| ---------- | ------------------------------- | ----------------------------- | ---------------------------------------------------- |
+| Class A    | Ordinary combustibles           | Wood, paper, cloth, rubber    | Water, foam, multipurpose dry chemical               |
+| Class B    | Flammable liquids and gases     | Gasoline, oil, paint, propane | Foam, CO₂, dry chemical (do **not** use water)       |
+| Class C    | Energized electrical equipment  | Servers, wiring, appliances   | CO₂, dry chemical (power must be disconnected first) |
+| Class D    | Combustible metals              | Magnesium, sodium, potassium  | Dry powder (specialized agents, not water/foam)      |
+| Class K    | Cooking oils and fats (kitchen) | Vegetable oil, animal fats    | Wet chemical extinguishers (saponification reaction) |
 
 Fire detection systems are essential for identifying fires at the earliest possible stage. Smoke detectors, heat detectors, and flame sensors are commonly used to detect fire conditions. These systems should be strategically placed throughout the facility, with particular attention to areas with high fire risks, such as server rooms, electrical closets, and areas containing flammable materials. The detection system should be connected to an alarm system that immediately notifies personnel of the danger and triggers the appropriate response measures. In larger facilities, advanced fire detection technologies, such as aspirating smoke detection (ASD) systems, can be used for early detection, particularly in areas with high-value assets.
 
-In addition to basic fire detection, modern systems can be integrated with building management systems (BMS) to provide real-time data and alerts. These systems can automatically activate fire suppression systems, adjust ventilation to control smoke spread, and lock down areas to limit exposure to fire or smoke. Integrating fire detection with security systems, such as access control and surveillance cameras, can further enhance response coordination and improve overall safety.
+In addition to basic fire detection, modern systems can be integrated with **building management systems (BMS)** to provide real-time data and alerts. These systems can automatically activate fire suppression systems, adjust ventilation to control smoke spread, and lock down areas to limit exposure to fire or smoke. Integrating fire detection with security systems, such as access control and surveillance cameras, can further enhance response coordination and improve overall safety.
 
 Once a fire is detected, prompt and effective suppression is essential to minimize damage. Fire suppression systems are designed to extinguish fires or control their spread. Common systems include automatic sprinklers, gaseous suppression systems (such as FM-200, CO2, or Inergen), and foam suppression systems. The type of suppression system used depends on the specific hazards present in the facility. For example, in data centers or server rooms, water-based suppression systems are typically avoided to prevent damage to electronic equipment, while clean agent suppression systems are preferred for their ability to extinguish fires without causing harm to sensitive equipment.
 
-:bulb: The most common fire suppression systems include water-based (sprinklers), gas-based (FM-200, CO₂, Inergen), dry chemical (potassium-based for kitchens), and foam-based (for fuel fires). In data centers and server rooms, clean agent systems like FM-200 or Novec 1230 are preferred as they suppress fire without damaging electronic equipment.
+> ℹThe most common fire suppression systems include water-based (sprinklers), gas-based (FM-200, CO₂, Inergen), dry chemical (potassium-based for kitchens), and foam-based (for fuel fires). In data centers and server rooms, clean agent systems like FM-200 or Novec 1230 are preferred as they suppress fire without damaging electronic equipment.
 
-Sprinkler systems, one of the most commonly used fire suppression technologies, are effective in containing fires by releasing water in a controlled manner when a certain temperature threshold is reached. These systems should be installed in all areas of the facility and regularly inspected and tested to ensure functionality. In areas where sprinklers may not be suitable, such as server rooms, clean agent systems, or gaseous suppression systems should be employed. These systems release non-toxic gases that suppress fire without harming the equipment, personnel, or the environment.
+**Sprinkler systems**, one of the most commonly used fire suppression technologies, are effective in containing fires by releasing water in a controlled manner when a certain temperature threshold is reached. These systems should be installed in all areas of the facility and regularly inspected and tested to ensure functionality. In areas where sprinklers may not be suitable, such as server rooms, clean agent systems, or gaseous suppression systems should be employed. These systems release non-toxic gases that suppress fire without harming the equipment, personnel, or the environment.
 
-Regular maintenance of fire suppression and detection systems is vital to ensure their reliability when needed. Routine testing, inspection, and maintenance should be carried out to ensure that all components are functioning correctly. This includes checking smoke detectors, testing sprinkler systems, and replacing expired fire suppression agents. Fire drills and training for personnel are also essential to ensure that staff are familiar with evacuation procedures and can respond effectively in the event of a fire.
+**Regular maintenance** of fire suppression and detection systems is vital to ensure their reliability when needed. Routine testing, inspection, and maintenance should be carried out to ensure that all components are functioning correctly. This includes checking smoke detectors, testing sprinkler systems, and replacing expired fire suppression agents. Fire drills and training for personnel are also essential to ensure that staff are familiar with evacuation procedures and can respond effectively in the event of a fire.
 
 In addition to traditional fire detection and suppression systems, facilities should implement fire safety policies and training programs for staff. Employees should be trained in fire prevention measures, the use of fire extinguishers, and emergency evacuation procedures. A clear and concise fire evacuation plan should be established, with designated assembly points and communication protocols to ensure that everyone is accounted for in the event of a fire. Emergency exits should be clearly marked, and access routes should remain unobstructed at all times.
 
@@ -395,28 +395,49 @@ Reliability comes from routine maintenance (inspections, testing detectors, repl
 
 ## 3.9.9 Power (e.g., redundant, backup) ##
 
-Power is a critical component of physical security, and ensuring its reliability is essential to maintaining continuous operations, especially for facilities housing sensitive equipment or critical infrastructure. Power failures can disrupt business operations, lead to data loss, or cause security systems to fail. Therefore, implementing redundant and backup power solutions is necessary to guarantee the availability and integrity of vital systems. These solutions not only ensure continuous operations but also help prevent downtime, enhance disaster recovery capabilities, and provide a safeguard against power-related threats.
+Power is a critical component of physical security, and ensuring its reliability is essential to maintaining continuous operations, especially for facilities housing sensitive equipment or critical infrastructure. Power failures can disrupt business operations, lead to data loss, or cause security systems to fail. Therefore, `implementing redundant and backup power solutions is necessary to guarantee the availability and integrity of vital systems`. These solutions not only ensure continuous operations but also help prevent downtime, enhance disaster recovery capabilities, and provide a safeguard against power-related threats.
 
-Redundant power systems are designed to prevent a single point of failure. In these systems, multiple power sources are available to ensure that if one source fails, another can take over seamlessly. Redundancy can be achieved through the use of multiple power grids, generators, or uninterruptible power supplies (UPS) to provide backup during power interruptions. Power supply redundancy should be built into critical systems such as servers, data centers, security systems, and communication equipment to ensure that no single failure can disrupt operations.
+**Redundant power systems** are `designed to prevent a single point of failure`. In these systems, multiple power sources are available to ensure that if one source fails, another can take over seamlessly. Redundancy can be achieved through the use of multiple power grids, generators, or uninterruptible power supplies (UPS) to provide backup during power interruptions. Power supply redundancy should be built into critical systems such as servers, data centers, security systems, and communication equipment to ensure that no single failure can disrupt operations.
 
-A key element of redundant power is the integration of Uninterruptible Power Supplies (UPS). UPS systems are essential for providing immediate power during an outage, bridging the gap until backup generators or other power sources can take over. UPS units are especially important for facilities with sensitive equipment or data that cannot afford even a brief interruption in power. These systems typically provide power for a short duration, allowing sufficient time to activate backup generators or gracefully shut down equipment to prevent data loss or corruption.
+A key element of redundant power is the integration of **Uninterruptible Power Supplies (UPS)**. UPS systems are essential for providing immediate power during an outage, bridging the gap until backup generators or other power sources can take over. UPS units are especially important for facilities with sensitive equipment or data that cannot afford even a brief interruption in power. These systems typically provide power for a short duration, allowing sufficient time to activate backup generators or gracefully shut down equipment to prevent data loss or corruption.
 
-:bulb: The most common types of Uninterruptible Power Supply (UPS) systems are:
-Standby (Offline) UPS – Provides basic protection by switching to battery power only when an outage or voltage fluctuation occurs.
-Line-Interactive UPS – Regulates minor power fluctuations using an automatic voltage regulator (AVR) and switches to battery during major disturbances.
-Online (Double-Conversion) UPS – Continuously converts AC to DC and back to AC, providing the highest level of protection against all power issues without switching delays.
+> ℹ The most common types of Uninterruptible Power Supply (UPS) systems are:
+- **Standby (Offline) UPS** – Provides basic protection by switching to battery power only when an outage or voltage fluctuation occurs.
+- **Line-Interactive UPS** – Regulates minor power fluctuations using an automatic voltage regulator (AVR) and switches to battery during major disturbances.
+- **Online (Double-Conversion) UPS** – Continuously converts AC to DC and back to AC, providing the highest level of protection against all power issues without switching delays.
 
-Backup power systems, such as diesel generators, provide long-term power support during extended outages. Diesel generators are often used in facilities where a continuous power supply is critical, such as in data centers, hospitals, and manufacturing plants. Backup generators are typically sized based on the facility's power requirements and should be maintained regularly to ensure their operational readiness when needed. These systems are typically set up to automatically start and switch on in the event of a power failure, providing a seamless transition from grid power to backup power.
+**Backup power systems**, such as diesel generators, provide long-term power support during extended outages. Diesel generators are often used in facilities where a continuous power supply is critical, such as in data centers, hospitals, and manufacturing plants. Backup generators are typically sized based on the facility's power requirements and should be maintained regularly to ensure their operational readiness when needed. These systems are typically set up to automatically start and switch on in the event of a power failure, providing a seamless transition from grid power to backup power.
 
-When designing power systems, consideration must also be given to the physical layout of power sources and distribution. Generators, UPS units, and batteries should be located in secure areas to prevent unauthorized access or tampering. Additionally, they should be protected from environmental risks such as flooding, fire, or extreme weather conditions that could damage or disable them. Backup power equipment should be located away from critical areas of the facility, such as server rooms or control centers, to avoid being affected by local disruptions or failures.
+When designing power systems, consideration must also be given to the **physical layout of power sources and distribution**. Generators, UPS units, and batteries should be located in secure areas to prevent unauthorized access or tampering. Additionally, they should be protected from environmental risks such as flooding, fire, or extreme weather conditions that could damage or disable them. Backup power equipment should be located away from critical areas of the facility, such as server rooms or control centers, to avoid being affected by local disruptions or failures.
 
 Regular testing and maintenance of redundant and backup power systems are essential to ensure their reliability during an emergency. Facilities should conduct routine load testing on UPS units and backup generators to verify that they can handle the expected power load in the event of an outage. Maintenance should include regular fuel checks for generators, battery replacement for UPS units, and inspection of wiring and distribution panels to prevent failures. Monitoring systems can also be used to track the status of power equipment in real time, providing alerts if any issues are detected.
 
-In addition to backup power systems, power distribution must be managed carefully to avoid overloading circuits or equipment during an outage. Proper planning and capacity assessment are required to ensure that backup power systems can support critical infrastructure without causing power surges or system failures. A facility's power distribution system should be designed with sufficient capacity to handle peak loads, and it should be capable of handling increased demands during power recovery periods.
+> ℹ In addition to backup power systems, power distribution must be managed carefully to avoid overloading circuits or equipment during an outage. Proper planning and capacity assessment are required to ensure that backup power systems can support critical infrastructure without causing power surges or system failures. A facility's power distribution system should be designed with sufficient capacity to handle peak loads, and it should be capable of handling increased demands during power recovery periods.
 
-Environmental factors should also be taken into account when designing power redundancy systems. For example, the location of backup generators should consider local climate conditions, such as temperature extremes, humidity, and the risk of flooding. Fuel supply management is another important consideration, as diesel generators require an adequate supply of fuel to operate for extended periods. Facilities should have contingency plans in place for refueling backup generators in case of long-term outages or supply disruptions.
+**Environmental factors** should also be taken into account when designing power redundancy systems. For example, the location of backup generators should consider local climate conditions, such as temperature extremes, humidity, and the risk of flooding. Fuel supply management is another important consideration, as diesel generators require an adequate supply of fuel to operate for extended periods. Facilities should have contingency plans in place for refueling backup generators in case of long-term outages or supply disruptions.
+
+Power Security Summary Table:
+
+| Component                 | Purpose                                         | Key Characteristics                                                          | CISSP Focus Area                   |
+| :------------------------ | :---------------------------------------------- | :--------------------------------------------------------------------------- | :--------------------------------- |
+| **Redundant Power**       | Eliminates **Single Points of Failure (SPOF)**. | Uses multiple grids, dual power supplies, and diverse routing.               | **Availability** & Fault Tolerance |
+| **UPS Systems**           | Provides **immediate**, short-term power.       | Bridges the gap between utility failure and generator startup.               | Data Integrity (Safe shutdowns)    |
+| **Backup Generators**     | Provides **long-term** power support.           | Usually diesel-powered; requires fuel management and load testing.           | Business Continuity (BCP)          |
+| **Physical Layout**       | Protects power infrastructure.                  | Secure locations, environmental protection (flood/fire), and access control. | Physical Security & Safety         |
+| **Maintenance & Testing** | Ensures **operational readiness**.              | Routine load testing, fuel checks, and battery replacement cycles.           | Operational Security               |
+
+Comparison of UPS Types:
+
+| UPS Type                       | Protection Level | Mechanism                                                                   | Best Use Case                                |
+| :----------------------------- | :--------------- | :-------------------------------------------------------------------------- | :------------------------------------------- |
+| **Standby (Offline)**          | Basic            | Switches to battery only during an outage or major fluctuation.             | Home offices or non-critical workstations.   |
+| **Line-Interactive**           | Moderate         | Uses an **Automatic Voltage Regulator (AVR)** to handle minor fluctuations. | Small server racks and network equipment.    |
+| **Online (Double-Conversion)** | **Highest**      | Always runs on battery; zero switchover time ($0ms$) between sources.       | Critical data centers and medical equipment. |
+
+---
 
 ### Open Questions ###
+
 
 1. Why is power reliability essential in facilities that host critical infrastructure, and what risks arise from power failures?
 <details>
@@ -454,4 +475,3 @@ Backup generators provide sustained power during extended outages, bridging beyo
 Reliability depends on regular maintenance and testing. This includes load testing UPS units, starting and running generators under real conditions, replacing UPS batteries, and checking fuel quality and levels. Monitoring systems should track performance in real time and alert operators to issues. Routine drills and inspections validate that systems will perform as expected during an outage, ensuring resilience when actual failures occur.
 </details>
 
----
