--- a/DOMAIN1 - Security and Risk Management/1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md
+++ b/DOMAIN1 - Security and Risk Management/1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md
@@ -6,9 +6,9 @@ An investigation will vary based on incident type. As an example, for a financia
 
 - **Civil**: In a civil case, `one person or entity sues another`. For example, one company might sue another for a trademark violation. A civil case is typically about monetary damages, and doesn't involve criminality. In a civil case, a preponderance of evidence is required to secure a victory. This differs from criminal cases, where a suspect is innocent until proven guilty beyond a reasonable doubt.
 
-- **Industry Standards**: An industry standards investigation is intended to determine whether an organization is adhering to a specific industry standard or set of standards, such as logging and auditing failed logon attempts. Because industry standards represent well-understood and widely implemented best practices, many organizations try to adhere to them even when they are not required to do so in order to improve security, and reduce operational and other risks.
+- **Industry Standards**: An industry standards investigation is `intended to determine whether an organization is adhering to a specific industry standard` or set of standards, such as logging and auditing failed logon attempts. Because industry standards represent well-understood and widely implemented best practices, many organizations try to adhere to them even when they are not required to do so in order to improve security, and reduce operational and other risks.
 
-- **Regulatory**: A regulatory investigation is conducted by a regulatory body, such as the Securities and Exchange Commission (SEC) or Financial Industry Regulatory Authority (FINRA), against an organization suspected of an infraction. In such cases, the organization is required to comply with the investigation, for example, by not hiding or destroying evidence.
+- **Regulatory**: A regulatory investigation is `conducted by a regulatory body`, such as the Securities and Exchange Commission (SEC) or Financial Industry Regulatory Authority (FINRA), `against an organization suspected of an infraction`. In such cases, the organization is required to comply with the investigation, for example, by not hiding or destroying evidence.
 
 | Investigation Type | Description                         | Additional Notes           |
 |--------------------|-----------------------------------|----------------------------|
@@ -19,6 +19,7 @@ An investigation will vary based on incident type. As an example, for a financia
 | Regulatory         | Regulatory Bodies                | Mandatory Compliance       |
 
 ### Open Questions ###
+
 1. What is the primary difference between a criminal and a civil investigation?
 <details>
   <summary>Show answer</summary>
